[tool.poetry]
name = "yantra"
version = "0.6.0"
homepage = "https://github.com/sdelements/yantra"
description = "A plugin framework"
authors = ["Security Compass <contact@securitycompass.com>"]
license = "MIT"
readme = "README.md"
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: MIT License',

    # Supported Languages
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
]
packages = [
  { include = "yantra" },
  { include = "tests", format = "sdist" },
]
exclude = [
  "yantra/**/tests",
  "tests"
]

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.dev-dependencies]
pre-commit = "3.7.1"
# lint
black = "24.4.2"
flake8 = "7.0.0"
flake8-bandit = "4.1.1"
flake8-bugbear = "24.4.26"
flake8-docstrings = "1.7.0"
flake8-polyfill = "1.0.2"
isort = "5.13.2"
# security
bandit = "1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
